created mainPage module with a router, controller and a view

--- a/Static/content/app.css
+++ b/Static/content/app.css
@@ -12,3 +12,19 @@
 }
 
 /*main page*/
+
+.header {
+  top: 0%
+}
+
+#welcome {
+  color: blue;
+}
+
+.links {
+  font-family: impact;
+}
+
+.footer {
+  bottom: 0%;
+}
