--- a/Static/content/app.css
+++ b/Static/content/app.css
@@ -3,16 +3,16 @@
 
 }
 .thing {
-    border: 2px solid green;
+    border-left: 5px solid green;
+     border-bottom: 5px solid green;
 }
-#comment {
-    border: 2px solid black;
-}
+
 #comment button{
-    float: right;
+    float: left;
 }
-textarea {
+input {
     width: 100%;
+    height: 50px;
 }
 .comment {
     margin: 20px;
