--- a/Static/content/app.css
+++ b/Static/content/app.css
@@ -10,6 +10,11 @@ body {
      border-bottom: 5px solid green;
 }
 
+h1 {
+    left: 4%;
+    position: relative;
+}
+
 #comment button{
     float: left;
 }
@@ -56,6 +61,11 @@ input {
   color: blue;
 }
 
+.welcome{
+    position: relative;
+    left: 4%;
+}
+
 .up-arr {
     height: 6%;
     width: 6%;
@@ -97,6 +107,9 @@ input {
 #navbar a{
     font-size: 30px;
     margin-left: 20px;
+    right: 5%;
+    float: right;
+    position: relative;
 }
 
 /*auth*/
