--- a/Static/content/app.css
+++ b/Static/content/app.css
@@ -10,6 +10,38 @@ body {
      border-bottom: 5px solid green;
 }
 
+.button {
+   border-top: 1px solid #97c9f7;
+   background: #65a9d7;
+   background: -webkit-gradient(linear, left top, left bottom, from(#3e629c), to(#65a9d7));
+   background: -webkit-linear-gradient(top, #3e629c, #65a9d7);
+   background: -moz-linear-gradient(top, #3e629c, #65a9d7);
+   background: -ms-linear-gradient(top, #3e629c, #65a9d7);
+   background: -o-linear-gradient(top, #3e629c, #65a9d7);
+   padding: 7px 14px;
+   -webkit-border-radius: 24px;
+   -moz-border-radius: 24px;
+   border-radius: 24px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 14px;
+   font-family: Helvetica, Arial, Sans-Serif;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+.button:hover {
+   border-top-color: #306d96;
+   background: #306d96;
+   color: #37b4e6;
+   }
+.button:active {
+   border-top-color: #124709;
+   background: #124709;
+   }
+
 h1 {
     left: 4%;
     position: relative;
@@ -64,6 +96,11 @@ input {
 .welcome{
     position: relative;
     left: 4%;
+}
+
+textarea{
+    resize: none;
+    padding: 1%;
 }
 
 .up-arr {
