--- a/Static/content/app.css
+++ b/Static/content/app.css
@@ -32,7 +32,9 @@
    font-family: Helvetica, Arial, Sans-Serif;
    text-decoration: none;
    vertical-align: middle;
+   margin: 12px;
    }
+
 .button:hover {
    border-top-color: #306d96;
    background: #306d96;
@@ -42,14 +44,75 @@
    border-top-color: #124709;
    background: #124709;
 }
+/* new Link Page */
 
+#linkForm {
+  position: relative;
+  top: 10%;
+  left: 25%;
+  font-family: Georiga;
 
-textarea{
-    resize: none;
-    padding: 1%;
+}
+
+.ltDan {
+  text-align: left;
+font-family: georgia;
+position: relative;
+left: 2%;
+}
+
+#sendMessage {
+  border-top: 1px solid #97c9f7;
+  background: #65a9d7;
+  background: -webkit-gradient(linear, left top, left bottom, from(#3e629c), to(#65a9d7));
+  background: -webkit-linear-gradient(top, #3e629c, #65a9d7);
+  background: -moz-linear-gradient(top, #3e629c, #65a9d7);
+  background: -ms-linear-gradient(top, #3e629c, #65a9d7);
+  background: -o-linear-gradient(top, #3e629c, #65a9d7);
+  padding: 7px 14px;
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+  border-radius: 24px;
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  color: white;
+  font-size: 14px;
+  font-family: Helvetica, Arial, Sans-Serif;
+  text-decoration: none;
+  vertical-align: middle;
+margin-left: 20px;
+margin-top: 70px;
+position: relative;
+}
+
+.linkSpot {
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid #DDDDDD;
+  resize: none;
+  position: relative;
+  display: inline-block;
+  border-radius: 5px;
+  -webkit-transition: all 0.6 cubic-bezier(.4,.17,.44,.93);
+  transition: all 0.6s cubic-bezier(.4,.17,.44,.93)
+}
+
+.linkSpot:focus {
+  -webkit-transform: scale(1.25, 1.25);
+  transform: scale(1.25, 1.25);
+  -webkit-box-shadow: 1px 1px 13px 7px rgba(7,40,77,0.72);
+  -moz-box-shadow: 1px 1px 13px 7px rgba(7,40,77,0.72);
+  box-shadow: 1px 1px 13px 7px rgba(7,40,77,0.72);
+  outline: none;
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid rgba(81, 203, 238, 1);
 }
 
 /* everything */
+
 
 #navbar {
     background: #65a9d7;
@@ -60,7 +123,7 @@ textarea{
     background: -o-linear-gradient(top, #3e629c, #65a9d7);
     position: relative;
     border-radius: 0;
-    top: 0;
+    top: 0px;
     margin-top: 0px;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -107,15 +170,46 @@ textarea{
     text-align:center;
 }
 
-.menu-left ul li a:active,
 .menu-left ul li a:hover {
 	background: rgba(50,153,187,0.8);
 }
 
-input {
+#authSection {
+  position: relative;
+  top: 15%;
+  align-content: center;
+}
+
+.input {
+  width: 20%;
+  height: 50px;
+  align-self: center;
+  position: relative;
+  left: 40%;
+  top: 45%;
+  display: block;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.badInput {
+  position: relative;
+  left: 41%;
+  margin: 0px;
+  font-family: impact;
+}
+
+#loginButt {
+  position: relative;
+left: 55%;
+top: 0%;
+}
+
+/*input {
     width: 100%;
     height: 50px;
-}
+}*/
+
 .comment {
     margin: 20px;
     border: 2px solid blue;
@@ -162,26 +256,35 @@ input {
 .up-arr {
     height: 6%;
     width: 6%;
+    display: none;
 }
 
 .down-arr {
     height: 6%;
     width: 6%;
+    display: none;
 }
 
 .links {
   font-family: impact;
   list-style-type: none;
   padding: 0px;
-  margin: 0px;
+  margin: 5px;
   display: inline-block;
+    text-decoration: none;
+    color: #369;
+    font: normal large verdana,arial,helvetica,sans-serif;
 }
 
 .oneLink {
   height: 30px;
-  line-height: 14px;
+  line-height: 32px;
   vertical-align: middle;
   display: inline-block;
+}
+
+.score {
+  display: none;
 }
 
 .footer {
